# IMAC-Prog-S2

./: CMakeLists.txt  README.md
lib/img/: CMakeLists.txt  README.md
lib/img/src/: Load.cpp  Load.h  Save.cpp  Save.h  Size.h  SizeU.h
src/: App.cpp  colors.cpp  colors.h  main.cpp  minimal.cpp  raytracer.cpp  raytracer.h  shading.cpp  shading.h  shape.cpp  shape.h
